# IRIS

./: .gitignore  BOOK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SPEC.md  STABILITY.md  autodiff.ll  book-template.typst  build.rs  hello_world.ll  test_bare_expr.iris  test_book_snippets.py  test_closure2.iris  test_closure_hof.iris  test_loop_scope.iris  test_out.txt  test_results2.txt  test_retcheck.iris  test_retcheck2.iris
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
benches/: binary_search_bench.iris  collatz_bench.iris  factorial_bench.iris  fib_bench.iris  hashmap_bench.iris  list_bench.iris  matrix_bench.iris  numerical_bench.iris  sieve_bench.iris  sort_bench.iris  string_bench.iris  tensor_batch_matmul_bench.iris  tree_bench.iris
docs/: getting-started.md  language-reference.md  stdlib-reference.md
examples/: concurrency.iris  error_handling.iris  http_server_smoke.iris  runtime_soak.iris  sorting.iris  structs.iris  type_system.iris  user_input.iris
fuzz/: Cargo.toml
fuzz/corpus/: seed_advanced.iris  seed_arithmetic.iris  seed_closures.iris  seed_concurrency.iris  seed_control_flow.iris  seed_data_structures.iris  seed_edge_cases.iris  seed_functions.iris  seed_lists.iris  seed_loops_recursion.iris  seed_maps.iris  seed_methods.iris  seed_minimal.iris  seed_ml_ops.iris  seed_pattern_matching.iris  seed_strings.iris  seed_traits.iris  seed_types.iris  test_closure.iris  test_closure_debug.iris
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_lexer.rs  fuzz_lowerer.rs  fuzz_parser.rs
(+321 files in other folders)
