[package]
name = "iris"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "IRIS: Intermediate Representation for Intelligent Systems — an ML compiler DSL"
license = "GPL-2.0-or-later"

[[bin]]
name = "iris"
path = "src/main.rs"

[lib]
name = "iris"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
