[package]
name = "iris-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.iris]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
doc = false

[[bin]]
name = "fuzz_compiler"
path = "fuzz_targets/fuzz_compiler.rs"
doc = false

[[bin]]
name = "fuzz_lowerer"
path = "fuzz_targets/fuzz_lowerer.rs"
doc = false
